--- a/african-marketplace/src/assets/css/Home.css
+++ b/african-marketplace/src/assets/css/Home.css
@@ -1,5 +1,45 @@
+@media screen and (max-width: 1680px) {
+	.container {
+		width: 68em;
+	}
+
+	.feature-item {
+		display: flex;
+		flex-wrap: wrap;
+		align-content: center;
+	}
+
+	.item-section {
+		padding: 10px;
+	}
+
+	.featured-img {
+		width: 100%;
+		max-height: 250px;
+		width: auto;
+	}
+}
+
 .header-img {
 	width: 100%;
 	max-height: 400px;
 	width: auto;
+}
+
+@media screen and (max-width: 1480px) {
+	.container {
+		width: calc(100% - 80px);
+	}
+}
+
+@media screen and (max-width: 980px) {
+	.container {
+		width: calc(100% - 100px);
+	}
+}
+
+@media screen and (max-width: 736px) {
+	.container {
+		width: calc(100% - 40px);
+	}
 }
